--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -15,6 +15,7 @@
         }
         body {
             padding: 0 0 0 3rem !important;
+            overflow:hidden;
         }
         .bg-footer-theme {
             background-color: transparent !important;
@@ -603,14 +604,10 @@
     });
     function script() {
 
-        if ($(window).width() < 600) {
-            $("#divPartial2").show();
-            document.getElementById("anasayfa").className = "menu-item active";
-        }
-        else {
+       
             $("#divPartial").show();
-            document.getElementById("anasayfa1").className = "nav__link active";
-        }
+            document.getElementById("anasayfa").className = "menu-item active";
+       
             document.body.style.cursor = "default";
             document.getElementById("content").style.display = "none";
             var online = null;
