--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -17,6 +17,9 @@
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 
 <style>
+    body {
+        padding: 0 0 0 4rem !important;
+    }
     #goster {
         display: none;
     }
@@ -159,68 +162,7 @@
 <div class="jumbotron vertical-center" onclick="hideAllPop()">
     <div class="container-fluid h-100">
         <div class="card mt-2">
-            <div class="card-header pb-0">
-                <div class="row">
-                    <div class="col">
-                        <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-                            <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-                                <i class="bx bx-menu bx-sm"></i>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
-                            @{
-                                string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                            }
-                            <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                            </object>
-                        </div>
-                        <ul class="dropdown-menu dropdown-menu-end">
-                            <li>
-                                <a class="dropdown-item" href='@Url.Action("Index", "Profil")'>
-                                    <div class="d-flex">
-                                        <div class="flex-shrink-0 me-3">
-                                            <div class="avatar avatar-online">
-                                                <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                    <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                                </object>
-                                            </div>
-                                        </div>
-                                        <div class="flex-grow-1">
-                                            @if (@Request.Cookies["Name"] != null)
-                                            {
-                                                <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                                <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                            }
-                                            else
-                                            {
-                                                <span class="fw-semibold d-block">Test</span>
-                                                <small class="text-muted">Yetki: Test</small>
-                                            }
-
-                                        </div>
-                                    </div>
-                                </a>
-                            </li>
-
-                            <li>
-                                <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                                   data-bs-target="#cikis">
-                                    <i class="bx bx-power-off me-2"></i>
-                                    <span class="align-middle">Oturumu Kapat</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-
-
-
-
-
-            </div>
+           
             <div class="card-body">
                 <div class="row">
                     <a id="goster" onclick="filtershow()" style="cursor:pointer">&#10148;Filtreleri Göster</a>
