--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -14,68 +14,14 @@
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link href="~/assets/vendor/css/Chart.css" rel="stylesheet" />
-
+<style>
+    body {
+        padding: 0 0 0 4rem !important;
+    }
+</style>
 <div class="container-fluid d-flex flex-column h-100">
 
-    <div class="card mx-auto" style="font-size:12px;width:inherit;">
-        <div class="card-header p-0">
-            <div class="row p-0 mt-1 mb-3 mx-2">
-                <div class="col">
-                    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-                        <a class="nav-item nav-link" href="javascript:void(0)">
-                            <i class="bx bx-menu bx-sm"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
-                        @{
-                            string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                        }
-                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                        </object>
-                    </div>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li>
-                            <a class="dropdown-item" href='@Url.Action("Index", "Profil")'>
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0 me-3">
-                                        <div class="avatar avatar-online">
-                                            <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                            </object>
-                                        </div>
-                                    </div>
-                                    <div class="flex-grow-1">
-                                        @if (@Request.Cookies["Name"] != null)
-                                        {
-                                            <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                            <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                        }
-                                        else
-                                        {
-                                            <span class="fw-semibold d-block">Test</span>
-                                            <small class="text-muted">Yetki: Test</small>
-                                        }
-
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                               data-bs-target="#cikis">
-                                <i class="bx bx-power-off me-2"></i>
-                                <span class="align-middle">Oturumu Kapat</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+    
 
     <div class="card mx-auto mt-3" style="font-size: 12px; width: inherit; height: inherit;">
         <div class="card-body">
@@ -511,7 +457,7 @@
         var KopyaVerisi = "";
 
         for (var i = 0; i < Filtered.length; i++) {
-            KopyaVerisi += `${Filtered[i].SERI_NO}	${GenislikKalinlikFormat(Filtered[i].ACIK1)}	${GenislikKalinlikFormat(Filtered[i].ACIK2)}	${Filtered[i].ACIK3}	${MiktarFormatla(Filtered[i].MIKTAR1)}	${MiktarFormatla(Filtered[i].MIKTAR2)}	${Filtered[i].SERI_NO_3}	${Filtered[i].SERI_NO_4}	${Filtered[i].ACIKLAMA_4}	${Filtered[i].ACIKLAMA_5}\n`;
+            KopyaVerisi += `${Filtered[i].SERI_NO}	${GenislikFormat(Filtered[i].ACIK2)}	${Filtered[i].SERI_NO_3}	${Filtered[i].SERI_NO_4}	${MiktarFormatla(Filtered[i].MIKTAR1)}	${MiktarFormatla(Filtered[i].MIKTAR2)}	${GenislikKalinlikFormat(Filtered[i].ACIK1)}	${Filtered[i].ACIK3}\n`;
         }
 
         try {
