--- a/NOVA/Views/YonetimPaneli/Yetki.cshtml
+++ b/NOVA/Views/YonetimPaneli/Yetki.cshtml
@@ -15,6 +15,9 @@
 <head>
 
     <style>
+        body {
+            padding: 0 0 0 4rem !important;
+        }
         .results tr[visible='false'],
         .no-result {
             display: none;
