--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -8,8 +8,6 @@
 <!DOCTYPE html>
 
 
-
-<html>
 <head>
     <link rel="stylesheet" type="text/css" href="../dist/pivot.css">
     <script type="text/javascript" src="../dist/pivot.js"></script>
@@ -17,13 +15,11 @@
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    
     <style>
         body {
             padding: 0 0 0 3rem !important;
         }
-    </style>
-    <style>
-
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -126,7 +122,7 @@
     </style>
 </head>
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid mt-3">
         <div class="centercontent" id="content" style="display:none">
             <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
         </div>
@@ -699,7 +695,7 @@
         </div>
     </div>
     @Html.Partial("IsEmriPartials/RehberPartial")
-    <script>
+<script>
 
         if ($(window).width() < 600) {
             $("#divPartial2").show();
@@ -1333,14 +1329,14 @@
             document.getElementById("DLTable").getElementsByTagName("tr")[val.parentNode.parentNode.rowIndex].getElementsByTagName("select")[3].removeAttribute("disabled");
             document.getElementById("DLTable").getElementsByTagName("tr")[val.parentNode.parentNode.rowIndex].getElementsByTagName('i')[0].style.display = "block";
             var s = document.getElementById("DLTable").getElementsByTagName("tr")[val.parentNode.parentNode.rowIndex].getElementsByTagName("select")[1].value;
-            
-            
-            
+
+
+
             if (OldStokAdi != $("#stokadi").val() && s != "SEÇİNİZ") {
                 var stokkodu = Stoklar.filter(x => x.STOK_ADI == s)[0].STOK_KODU;
                 var url = "http://192.168.2.13:83/api/seri/receteden/" + stokkodu + "/0/" + val.value
                 $.getJSON(url, function (d1) {
-                
+
                     if (d1.length > 0) {
                         var $sel3 = document.getElementById("DLTable").getElementsByTagName("tr")[val.parentNode.parentNode.rowIndex].getElementsByTagName("select")[3];
                         $sel3.replaceChildren();
@@ -1357,7 +1353,7 @@
                             $sel3.appendChild(opt3);
                         }
                     }
-                    
+
                 })
             }
         } else {
@@ -2468,7 +2464,7 @@
         $("#content").hide();
 
         $("#seri").val(null).trigger("input");
-        /*mail();*/
+        mail();
 
         Swal.fire(
             'Veriler başarılı bir şekilde Netsis\'e aktarıldı.',
@@ -2524,7 +2520,7 @@
         $("#content").hide();
 
         $("#seri").val(null).trigger("input");
-        /*mail();*/
+        mail();
         const Toast = Swal.mixin({
             toast: true,
             position: 'center',
@@ -2603,7 +2599,7 @@
         $("#content").hide();
 
         $("#seri").val(null).trigger("input");
-        /*mail();*/
+        mail();
         const Toast = Swal.mixin({
             toast: true,
             position: 'center',
@@ -3642,11 +3638,44 @@ $.ajax({
         var currentRow = table.find("tr").eq(rowIndex);
         currentRow.find("select").eq(1).trigger("change");
     }
+    function mail() {
+        var Tip = $('input[name="uretim-tip"]:checked').val();
+        var result;
+        switch (Tip) {
+            case 'DL':
+                result = Grupla(JSON.parse(localStorage.DLlistTop))
+                break;
+            case 'TP':
+                result = Grupla(JSON.parse(localStorage.TPPivotToplamVeri));
+               
+                break;
+            case 'BK':
+                result = Grupla(JSON.parse(localStorage.BKPivotToplamVeri));
 
+                break;
+            case 'MH':
+                result = Grupla(JSON.parse(localStorage.MHPivotToplamVeri));
+
+                break;
+            case 'RF':
+                result = Grupla(JSON.parse(localStorage.RFPivotToplamVeri));
+
+                break;
+
+        }
+        $.ajax({
+            url: '@Url.Action("Mail", "IsEmri")',
+            type: 'POST',
+            data: { mail: result, hamkod: Tip },
+            success: function () {
+                alert('Mail gönderildi!')
+            }
+        })
+    
+        }
 //#endregion
-    </script>
+</script>
 </body>
-</html>
 
 
 
