--- a/NOVA/Views/Satis/FiyatListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatListesi.cshtml
@@ -12,6 +12,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
+    body {
+        padding: 0 0 0 4rem !important;
+    }
     #table i {
         color: #00AAFF;
         font-weight: 300;
@@ -140,61 +143,7 @@
         ;}
     <div class="container-fluid">
        
-        <div class="row">
-            <div class="col">
-                <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-                    <a class="nav-item nav-link px-0 me-xl-4" href="javascript:void(0)">
-                        <i class="bx bx-menu bx-sm"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col">
-                <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
-                    @{
-                        string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                    }
-                    <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                        <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                    </object>
-                </div>
-                <ul class="dropdown-menu dropdown-menu-end">
-                    <li>
-                        <a class="dropdown-item" href='@Url.Action("Index", "Profil")'>
-                            <div class="d-flex">
-                                <div class="flex-shrink-0 me-3">
-                                    <div class="avatar avatar-online">
-                                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                        </object>
-                                    </div>
-                                </div>
-                                <div class="flex-grow-1">
-                                    @if (@Request.Cookies["Name"] != null)
-                                    {
-                                        <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                        <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                    }
-                                    else
-                                    {
-                                        <span class="fw-semibold d-block">Test</span>
-                                        <small class="text-muted">Yetki: Test</small>
-                                    }
-
-                                </div>
-                            </div>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                           data-bs-target="#cikis">
-                            <i class="bx bx-power-off me-2"></i>
-                            <span class="align-middle">Oturumu Kapat</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+        
 
 
         <div id="employeeTableWrapper" class="tableWrapper">
@@ -202,7 +151,6 @@
             <table id="table"
                    class="table table-striped"
                    data-show-fullscreen="true"
-                   data-toggle="table"
                    data-toolbar="#toolbar"
                    data-show-export="true"
                    data-export-data-type="all"
@@ -255,51 +203,52 @@
         $(document).ready(function () {
             $.getJSON("http://192.168.2.13:83/api/fiyat/exec/fiyatdurum", function (data) {
                 sondurum = data;
-            })
-            $("#table").bootstrapTable({
-                url: "http://192.168.2.13:83/api/fiyat/exec/000000000000001",
-                exportOptions: {
-                    fileName: function () {
-                        var dat = new Date();
-                        return "Güncel_Fiyat_Listesi_" + dat.toLocaleDateString() + "_" + dat.getHours() + "." + dat.getMinutes();
-                    },
-                    jspdf: {
-                        orientation: 'l',
-                        format: 'a4',
-                        autotable: {
-                            tableWidth: 'auto',
-                            columnStyles: {
-                                4: {
-                                    columnMargin: 0
-                                }
+            }).done(() =>
+            {
+                $("#table").bootstrapTable({
+                    url: "http://192.168.2.13:83/api/fiyat/exec/000000000000001",
+                    exportOptions: {
+                        fileName: function () {
+                            var dat = new Date();
+                            return "Güncel_Fiyat_Listesi_" + dat.toLocaleDateString() + "_" + dat.getHours() + "." + dat.getMinutes();
+                        },
+                        jspdf: {
+                            orientation: 'l',
+                            format: 'a4',
+                            autotable: {
+                                tableWidth: 'auto',
+                                columnStyles: {
+                                    4: {
+                                        columnMargin: 0
+                                    }
+                                },
+
                             },
 
+
+
                         },
+                        ignoreColumn: ['FIYAT3', 'FIYAT2']
 
+                    }
+                });
 
-
-                    },
-                    ignoreColumn: ['FIYAT3', 'FIYAT2']
+                document.getElementsByClassName("search-input")[0].onkeyup = function () {
+                    document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.toUpperCase();
+                    document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.replace("İ", "I").replace("Ö", "O").replace("Ü", "U").replace("Ş", "S").replace("Ç", "C").replace("Ğ", "G");
 
                 }
-            })
-            if ($(window).width() < 600) {
-                $("#divPartial2").show();
-                document.getElementById("satis").className = "menu-item open active";
-                document.getElementById("fiyatlistesi").className = "menu-item active";
-            }
-            else {
+
+            });
+            
+         
                 $("#divPartial").show();
 
                 document.getElementById("satis1").className = "nav__link active";
                 document.getElementById("fiyatlistesi1").className = "nav__dropdown-item active";
-            }
             
-            document.getElementsByClassName("search-input")[0].onkeyup = function () {
-                document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.toUpperCase();
-                document.getElementsByClassName("search-input")[0].value = document.getElementsByClassName("search-input")[0].value.replace("İ", "I").replace("Ö", "O").replace("Ü", "U").replace("Ş", "S").replace("Ç", "C").replace("Ğ", "G");
-
-            }
+            
+            
 
         }).ajaxComplete(function () {
 
