--- a/NOVA/Views/Satis/HammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/HammaddeListesi.cshtml
@@ -16,6 +16,9 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <link href="~/assets/vendor/css/cssprogress.min.css" rel="stylesheet" />
 <style>
+    body{
+        padding: 0 0 0 3rem !important;
+    }
     .fa-magnifying-glass:hover{
         opacity:.7;
     }
@@ -161,63 +164,7 @@
 <div class="container-fluid h-100">
 
     <div class="card mx-auto" style="font-size:12px">
-        <div class="card-header pb-0">
-            <div class="row">
-                <div class="col">
-                    <div class="layout-menu-toggle navbar-nav align-items-xl-center me-3 me-xl-0 d-xl-none">
-                        <a class="nav-item nav-link" href="javascript:void(0)">
-                            <i class="bx bx-menu bx-sm"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="avatar avatar-online float-end mb-0" data-bs-toggle="dropdown">
-                        @{
-                            string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
-                        }
-                        <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                            <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                        </object>
-                    </div>
-                    <ul class="dropdown-menu dropdown-menu-end">
-                        <li>
-                            <a class="dropdown-item" href='@Url.Action("Index","Profil")'>
-                                <div class="d-flex">
-                                    <div class="flex-shrink-0 me-3">
-                                        <div class="avatar avatar-online">
-                                            <object data="/assets/img/avatars/@s" type="image/png" class="w-px-40 h-auto rounded-circle">
-                                                <img src="/assets/img/avatars/7.png" class="w-px-40 h-auto rounded-circle">
-                                            </object>
-                                        </div>
-                                    </div>
-                                    <div class="flex-grow-1">
-                                        @if (@Request.Cookies["Name"] != null)
-                                        {
-                                            <span class="fw-semibold d-block">@Request.Cookies["Name"].Value</span>
-                                            <small class="text-muted">Yetki: @Request.Cookies["RoleName"].Value</small>
-                                        }
-                                        else
-                                        {
-                                            <span class="fw-semibold d-block">Test</span>
-                                            <small class="text-muted">Yetki: Test</small>
-                                        }
-
-                                    </div>
-                                </div>
-                            </a>
-                        </li>
-
-                        <li>
-                            <a href="javascript:void(0);" class="dropdown-item" data-bs-toggle="modal"
-                               data-bs-target="#cikis">
-                                <i class="bx bx-power-off me-2"></i>
-                                <span class="align-middle">Oturumu Kapat</span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        
 
 
 
@@ -269,7 +216,7 @@
                                 </select>
                             </div>
                             <div class="col-sm">
-                                 
+
                                 <i data-bs-toggle="tooltip" data-popup="tooltip-custom" data-bs-placement="top" data-bs-html="true" title="" data-bs-original-title="<span style='font-size:8px'>Fiyat 0 olanları getirir.</span>" onclick="alert1()" class="fa-solid fa-magnifying-glass" style="cursor:pointer"></i>
                             </div>
                         </div>
@@ -303,16 +250,18 @@
                                     {
                                         <div class="row">
                                             <div class="col-sm">
-                                                <label id="tumortfiyat" class="float-start text-nowrap" style="display: none"><b>Ağ. Ort. Fiyat Tümü:</b> </label>
+                                                <label id="tumortfiyat" class="float-start text-nowrap" style="display: none"><b>* Ağ. Ort. Fiyat Tümü:</b> </label>
+                                                <label id="tumtutarfiyat" class="float-start text-nowrap" style="display: none"><b>** Toplam Tutar:</b> </label>
                                             </div>
                                             <div class="col-sm">
-                                                <label id="ortfiyat" class="float-start text-nowrap" style="display: none; color: #0085fc "><b>Ağ. Ort. Fiyat TRY:</b> </label>
+                                                <label id="ortfiyat" class="float-start text-nowrap" style="display: none; color: #0085fc "><b>* Ağ. Ort. Fiyat TRY:</b> </label>
                                             </div>
                                             <div class="col-sm">
-                                                <label id="ortfiyat1" class="float-start text-nowrap" style="display: none; color: #fc6a5d "><b>Ağ. Ort. Fiyat USD:</b> </label>
+                                                <label id="ortfiyat1" class="float-start text-nowrap" style="display: none; color: #fc6a5d "><b>* Ağ. Ort. Fiyat USD:</b> </label>
+                                                <label id="tutar1" class="float-start text-nowrap" style="display: none; color: #fc6a5d "><b>** Toplam Tutar USD:</b> </label>
                                             </div>
                                             <div class="col-sm">
-                                                <label id="ortfiyat2" class="float-start text-nowrap" style="display: none; color: #aa4f82 "><b>Ağ. Ort. Fiyat EUR:</b> </label>
+                                                <label id="ortfiyat2" class="float-start text-nowrap" style="display: none; color: #aa4f82 "><b>* Ağ. Ort. Fiyat EUR:</b> </label>
                                             </div>
                                             <div class="col-sm">
 
@@ -389,7 +338,16 @@
                         </tr>
                     </thead>
                 </table>
-
+                <div class="row">
+                    <div class="col">
+                        <span style="color:red">*</span>&nbsp;&nbsp;Virgülden sonra <b>4</b> hane olacak şekilde yuvarlanmıştır.
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <span style="color:red">**</span>&nbsp;Hesaplama işlemi yapılırken ortalamadaki (*) yuvarlama dikkate alınmamıştır.
+                    </div>
+                </div>
 
             </div>
 
@@ -426,7 +384,7 @@
     var dovFilter = [];
     var list = [];
     $(document).ready(function () {
-
+        
         $.getJSON("http://192.168.2.13:83/api/exceltest", function (data) {
             detayli = data;
             $('#table').bootstrapTable('destroy');
@@ -435,7 +393,7 @@
             });
 
         }).done(function () {
-
+            
             $('#progress').hide();
 
             for (let i = 0; i < detayli.length; i++) {
@@ -494,8 +452,8 @@
             }
             for (let i = 0; i < genislikfilter.length; i++) {
                 var option = document.createElement("option");
-                option.value = (genislikfilter[i]).toLocaleString().replaceAll('.','');
-                option.innerHTML = (genislikfilter[i]).toLocaleString();
+                option.value = (genislikfilter[i]).toLocaleString().replaceAll('.', '');
+                option.innerHTML = (genislikfilter[i]).toLocaleString().replaceAll('.','');
                 document.getElementById("genislik").appendChild(option);
             }
             for (let i = 0; i < kaplamafilter.length; i++) {
@@ -657,7 +615,7 @@
                 }
                 genfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < genfilt.length; i++) {
-                    var newOption = new Option(genfilt[i].toLocaleString(), (genfilt[i].toLocaleString()).replaceAll(".",""), false, false);
+                    var newOption = new Option(genfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), genfilt[i], false, false);
                     $('#genislik').append(newOption);
                 }
             }
@@ -690,9 +648,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] === "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] === "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -736,7 +694,7 @@
 
                 kalfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < kalfilt.length; i++) {
-                    var newOption = new Option(kalfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), kalfilt[i].toLocaleString(), false, false);
+                    var newOption = new Option(kalfilt[i].toLocaleString(), (kalfilt[i].toLocaleString()).replaceAll(".", ""), false, false);
                     $('#kalinlik').append(newOption);
                 }
             }
@@ -800,9 +758,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] === "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] === "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -909,9 +867,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] === "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] === "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -969,7 +927,7 @@
                 }
                 kalfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < kalfilt.length; i++) {
-                    var newOption = new Option(kalfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), kalfilt[i], false, false);
+                    var newOption = new Option(kalfilt[i].toLocaleString(), (kalfilt[i].toLocaleString()).replaceAll(".", ""), false, false);
                     $('#kalinlik').append(newOption);
                 }
             }
@@ -1017,9 +975,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] === "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] === "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -1078,7 +1036,7 @@
                 }
                 kalfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < kalfilt.length; i++) {
-                    var newOption = new Option(kalfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), kalfilt[i], false, false);
+                    var newOption = new Option(kalfilt[i].toLocaleString(), (kalfilt[i].toLocaleString()).replaceAll(".", ""), false, false);
                     $('#kalinlik').append(newOption);
                 }
             }
@@ -1127,9 +1085,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] == "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] == "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -1187,7 +1145,7 @@
                 }
                 kalfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < kalfilt.length; i++) {
-                    var newOption = new Option(kalfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), kalfilt[i], false, false);
+                    var newOption = new Option(kalfilt[i].toLocaleString(), (kalfilt[i].toLocaleString()).replaceAll(".", ""), false, false);
                     $('#kalinlik').append(newOption);
                 }
             }
@@ -1235,9 +1193,9 @@
                 kurfilt.sort();
                 for (let i = 0; i < kurfilt.length; i++) {
                     var t = null;
-                    if (kuralFilter[i] === "0") {
+                    if (kurfilt[i] === "0") {
                         t = "Hazır Stoklar";
-                    } else if (kuralFilter[i] === "1") {
+                    } else if (kurfilt[i] === "1") {
                         t = "İş Emri Verilen Stoklar";
                     } else {
                         t = "Üretim Bekleyenler";
@@ -1295,7 +1253,7 @@
                 }
                 kalfilt.sort(function (a, b) { return a - b });
                 for (let i = 0; i < kalfilt.length; i++) {
-                    var newOption = new Option(kalfilt[i].toLocaleString(undefined, { minimumFractionDigits: 2, maximumFractionDigits: 2 }), kalfilt[i], false, false);
+                    var newOption = new Option(kalfilt[i].toLocaleString(), (kalfilt[i].toLocaleString()).replaceAll(".", ""), false, false);
                     $('#kalinlik').append(newOption);
                 }
             }
@@ -1373,7 +1331,7 @@
                 $('#kaplama').append(newOption);
             }
             for (let i = 0; i < genislikfilter.length; i++) {
-                var newOption = new Option(genislikfilter[i].toLocaleString(), genislikfilter[i], false, false);
+                var newOption = new Option(genislikfilter[i].toLocaleString().replaceAll('.', ''), genislikfilter[i].toLocaleString().replaceAll('.',''), false, false);
                 $('#genislik').append(newOption);
             }
             for (let i = 0; i < menseifilter.length; i++) {
@@ -1497,12 +1455,13 @@
         }
         if (ozelyetki == 1) {
             document.getElementById("tumortfiyat").style.display = "unset";
-
-            document.getElementById("tumortfiyat").innerHTML = "<b>Ağ. Ort. Fiyat Tümü:</b> $ " + (parseFloat(ToplamTum) / parseFloat(tonajToplam)).toFixed(4);
+            document.getElementById("tumtutarfiyat").style.display = "unset";
+            document.getElementById("tumortfiyat").innerHTML = "<b>* Ağ. Ort. Fiyat Tümü:</b> &nbsp;$ " + (parseFloat(ToplamTum) / parseFloat(tonajToplam)).toFixed(4);
+            document.getElementById("tumtutarfiyat").innerHTML = "<b>** Toplam Tutar Tümü:</b> $ " + ((parseFloat(ToplamTum) / parseFloat(tonajToplam)) * tonajToplam).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 2 })
             if (ToplamTRY > 0) {
                 document.getElementById("ortfiyat").style.display = "unset";
 
-                document.getElementById("ortfiyat").innerHTML = "<b>Ağ. Ort. Fiyat TRY:</b> ₺ " + (parseFloat(ToplamTRY) / parseFloat(tonajToplamTRY)).toFixed(4);
+                document.getElementById("ortfiyat").innerHTML = "<b>* Ağ. Ort. Fiyat TRY:</b> ₺ " + (parseFloat(ToplamTRY) / parseFloat(tonajToplamTRY)).toFixed(4);
 
             } else {
                 document.getElementById("ortfiyat").style.display = "none";
@@ -1510,17 +1469,19 @@
             }
             if (ToplamUSD > 0) {
                 document.getElementById("ortfiyat1").style.display = "unset";
-
-                document.getElementById("ortfiyat1").innerHTML = "<b>Ağ. Ort. Fiyat USD:</b> $ " + (parseFloat(ToplamUSD) / parseFloat(tonajToplamUSD)).toFixed(4);
+                document.getElementById("tutar1").style.display = "unset";
+                document.getElementById("ortfiyat1").innerHTML = "<b>* Ağ. Ort. Fiyat USD:</b> &nbsp;$" + (parseFloat(ToplamUSD) / parseFloat(tonajToplamUSD)).toFixed(4);
+                document.getElementById("tutar1").innerHTML = "<b>** Toplam Tutar USD:</b> $ " + ((parseFloat(ToplamUSD) / parseFloat(tonajToplamUSD)) * tonajToplamUSD).toLocaleString(undefined, { minimumFractionDigits: 0, maximumFractionDigits: 2 });
 
             } else {
                 document.getElementById("ortfiyat1").style.display = "none";
+                document.getElementById("tutar1").style.display = "unset";
 
             }
             if (ToplamEUR > 0) {
                 document.getElementById("ortfiyat2").style.display = "unset";
 
-                document.getElementById("ortfiyat2").innerHTML = "<b>Ağ. Ort. Fiyat EUR:</b> € " + (parseFloat(ToplamEUR) / parseFloat(tonajToplamEUR)).toFixed(4);
+                document.getElementById("ortfiyat2").innerHTML = "<b>* Ağ. Ort. Fiyat EUR:</b> € " + (parseFloat(ToplamEUR) / parseFloat(tonajToplamEUR)).toFixed(4);
 
             } else {
                 document.getElementById("ortfiyat2").style.display = "none";
