--- a/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
+++ b/NOVA/Views/Satis/ZiyaretPlanlari.cshtml
@@ -7,7 +7,9 @@
     img:hover {
         opacity: 0.7
     }
-
+    body {
+        padding: 0 0 0 4rem !important;
+    }
 
     @@media screen and (max-width: 600px) {
         body {
