İş Emri DL Değiştirildi

--- a/NOVA/Views/IK/PersonelBilgi.cshtml
+++ b/NOVA/Views/IK/PersonelBilgi.cshtml
@@ -5405,6 +5405,9 @@
 
     </script>
     <script>
+        $(document).ready(function () {
+            $('#pageName').html('<div class="dot"></div> Personel Bilgi')
+        })
         if ($(window).width() < 600) {
             $("#divPartial2").show();
             document.getElementById("ik").className = "menu-item open active";
