--- a/NOVA/Views/IK/PersonelPuantaj.cshtml
+++ b/NOVA/Views/IK/PersonelPuantaj.cshtml
@@ -494,6 +494,7 @@
         var izinler = [];
         var izinlercodes = [];
         $(document).ready(function () {
+            $('#pageName').html('<div class="dot"></div> Personel Puantaj')
             $("#content").hide();
             $.getJSON("http://192.168.2.13:83/api/attendance/offday", function (data) {
                 tumizinler = data;
