--- a/NOVA/Views/IK/PersonelSubeYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelSubeYonetim.cshtml
@@ -6042,6 +6042,9 @@
 
     </script>
     <script>
+        $(document).ready(function () {
+            $('#pageName').html('<div class="dot"></div> Personel Şube Yönetimi')
+        })
         function matchStart(params, data) {
             // If there are no search terms, return all of the data
             if ($.trim(params.term) === '') {
