--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -1072,6 +1072,9 @@
     });
 
     $(document).ready(function () {
+       
+        $('#pageName').html('<div class="dot"></div> İş Emri')
+        
         $(".js-select").select2(
             {
                 "language": {
@@ -2458,7 +2461,7 @@
                 $.ajax({
     url: '@Url.Action("Post","IsEmri")',
     type: 'POST',
-                    data: { isemri: lis},
+                    data: { isemri: lis, TamamiKullanilsin: TamamiAktarilsin },
     success: function () {
 
         $("#content").hide();
