--- a/NOVA/Views/Satis/FiyatListesi.cshtml
+++ b/NOVA/Views/Satis/FiyatListesi.cshtml
@@ -201,6 +201,7 @@
         }
         var sondurum = null;
         $(document).ready(function () {
+            $('#pageName').html('<div class="dot"></div> Fiyat Listesi')
             $.getJSON("http://192.168.2.13:83/api/fiyat/exec/fiyatdurum", function (data) {
                 sondurum = data;
             }).done(() =>
