--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -231,7 +231,7 @@
             }
         }
         $(document).ready(function () {
-
+            $('#pageName').html('<div class="dot"></div> Fiyat Yönetimi')
             $("#table").bootstrapTable({
                 url: "http://192.168.2.13:83/api/fiyat/exec/000000000000001",
                 onDragStop: function (table, row) {
