--- a/NOVA/Views/Satis/HammaddeListesi.cshtml
+++ b/NOVA/Views/Satis/HammaddeListesi.cshtml
@@ -384,7 +384,7 @@
     var dovFilter = [];
     var list = [];
     $(document).ready(function () {
-        
+        $('#pageName').html('<div class="dot"></div> Fabrika Stok')
         $.getJSON("http://192.168.2.13:83/api/exceltest", function (data) {
             detayli = data;
             $('#table').bootstrapTable('destroy');
