--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -476,7 +476,7 @@
     }
     var sondurum = null;
     $(document).ready(function () {
-
+        $('#pageName').html('<div class="dot"></div> Stok')
         $('#employeeTableWrapper2').hide();
         getstokAsync().then(function (data) {
             stoklar = data;
