--- a/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
+++ b/NOVA/Views/Sevkiyat/DepoTransfer.cshtml
@@ -32,6 +32,9 @@
 
 
 <script>
+    $(document).ready(() => {
+        $('#pageName').html('<div class="dot"></div> Depo Transfer')
+    })
     if ($(window).width() < 600) {
         $("#divPartial2").show();
         document.getElementById("sevkiyat").className = "menu-item open active";
