--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -561,6 +561,7 @@
         myModal.show();
     }
     $(document).ready(function () {
+        $('#pageName').html('<div class="dot"></div> Satıcı Sipariş Raporu')
         $(document).on('show.bs.modal', '.modal', function () {
             const zIndex = 1040 + 10 * $('.modal:visible').length;
             $(this).css('z-index', zIndex);
