--- a/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
+++ b/NOVA/Views/Sevkiyat/SevkMalKabul.cshtml
@@ -114,6 +114,7 @@
     var Depolar = [];
 
     $(document).ready(function () {
+        $('#pageName').html('<div class="dot"></div> Sevk Kabul İşlemleri')
         $.ajax({
             url: "http://192.168.2.13:83/api/stok/depo",
             type: 'GET',
