--- a/NOVA/Views/Home/Index.cshtml
+++ b/NOVA/Views/Home/Index.cshtml
@@ -163,6 +163,7 @@
     @if ((string)Session["Onay"] == "onay")
     {
         <script>
+            
             const Toast = Swal.mixin({
                 toast: true,
                 position: 'bottom-end',
@@ -757,7 +758,7 @@
                 $('.durum').tooltip();
 
             })
-
+        $('#pageName').html('<div class="dot"></div> Anasayfa')
         };
 
 
