--- a/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
+++ b/NOVA/Views/IK/PersonelBilgiYonetim.cshtml
@@ -6341,6 +6341,7 @@
   
     <script>
         $(document).ready(function () {
+            $('#pageName').html('<div class="dot"></div> Personel Bilgi Yönetimi')
             $(document).on('select2:open', () => {
                 document.querySelector('.select2-search__field').focus();
             });
