--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -291,7 +291,7 @@
        
     }
     $(document).ready(function () {
-
+        $('#pageName').html('<div class="dot"></div> Detaylı Siparis')
         $.getJSON("http://192.168.2.13:83/api/detaylisip", function (data) {
             detayli = data;
         }).done(function () {
