--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -313,7 +313,7 @@
 
     }
     $(document).ready(function () {
-
+        $('#pageName').html('<div class="dot"></div> Müşteri Sipariş Raporu')
         $.getJSON("http://192.168.2.13:83/api/detaylisip", function (data) {
             detayli = data;
         }).done(function () {
