--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -11,7 +11,13 @@
     <!--========== CSS ==========-->
 
     <style>
-
+        .dot {
+            height: 10px;
+            width: 10px;
+            background-color: #71dd37;
+            border-radius: 50%;
+            display: inline-block;
+        }
         ::-webkit-scrollbar {
             width: 2px;
         }
@@ -606,11 +612,15 @@
                 </div>
             </div>
             
-            <div>
+            <div style="height:30vh;">
                 @{
                     string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
                 }
-                <a href="/Profil/Index" class="nav__link nav__logout profil" style="margin: 2rem 0 !important;">
+                <a href="#" class="nav__link nav__logout profil" style="padding-top: 2rem !important; margin-top: 0 !important;">
+                    
+                    <span class="nav__name ms-1" id="pageName"></span>
+                </a>
+                <a href="/Profil/Index" class="nav__link nav__logout profil" style="margin-top: 50% !important; padding: 0 !important; ">
 
                     <img src="/assets/img/avatars/@s" type="image/png" class="rounded-circle profil" style="width: 35px;">
 
@@ -618,7 +628,7 @@
                 </a>
 
                 <a href="#" class="nav__link nav__logout cikis" data-bs-toggle="modal"
-                   data-bs-target="#cikis" style="margin-top:0 !important;padding: 0 !important;">
+                   data-bs-target="#cikis" style="margin-top:5% !important;padding: 0 !important;">
                     <i class='bx bx-lock nav__icon'></i>
                     <span class="nav__name">Çıkış</span>
                 </a>
