Üretim kayıtlarında sıra orana göre düzenlendi. Menüde footer eklendi. Sayfalardan footer kaldırıldı. Sevkiyat=>Satıcı Siparişinde showProgress() eklendi.

--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -121,7 +121,7 @@
         }
     </style>
 </head>
-<body>
+<body style="overflow:hidden">
     <div class="container-fluid mt-3">
         <div class="centercontent" id="content" style="display:none">
             <div class="heart"><img id="progress" src="~/images/novasaydam.png" style="max-width:15vw" /></div>
@@ -654,7 +654,7 @@
                 <button class="btn btn-info text-nowrap" style="background-image: linear-gradient(to right, #E0EAFC 0%, #CFDEF3 51%, #E0EAFC 100%);color:black;font-size:11px" onclick="netsisaktar()"><i class='bx bx-transfer'></i> NETSİSE AKTAR</button>
             </div>
         </div>
-        <div class="table-responsive mt-3">
+        <div class="mt-3" style="overflow:auto !important;max-height:40vh">
 
             <div class="row me-0">
                 <div class="col">
@@ -2275,7 +2275,7 @@
             $("#RFTable").hide();
             $("#RFPivot").hide();
             $("#RFPivotTop").hide();
-            $("#tamamidiv").hide();
+            $("#tamamidiv").show();
             $("#tamami").prop("checked", false);
             if ($("#seri").val() != null && $("#seri").val()!="") {
 
@@ -2456,6 +2456,7 @@
         var Tip = $('input[name="uretim-tip"]:checked').val();
         switch (Tip) {
             case 'DL':
+                var TamamiAktarilsin = $("#tamami").is(":checked");
                 var lis = [];
                 lis = takiplist;
                 $.ajax({
