--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporu.cshtml
@@ -20,6 +20,7 @@
     body {
         padding: 0 0 0 4rem !important;
     }
+
     #goster {
         display: none;
     }
@@ -159,10 +160,13 @@
         pointer-events: none;
     }
 </style>
+<div id="nova-overlay" style="position: absolute; background: #00000080; left: 0; right: 0; bottom: 0; top: 0; z-index: 9999999;display:none;justify-content:center;align-items:center;">
+    <div class="heart"><img id="progress" src="~/images/novasaydam.png" width="400" /></div>
+</div>
 <div class="jumbotron vertical-center" onclick="hideAllPop()">
     <div class="container-fluid h-100">
         <div class="card mt-2">
-           
+
             <div class="card-body">
                 <div class="row">
                     <a id="goster" onclick="filtershow()" style="cursor:pointer">&#10148;Filtreleri Göster</a>
@@ -597,7 +601,17 @@
         height: 60px;
     }
 </style>
-
+<script>
+    function ShowProgress() {
+        document.body.style.overflow = 'hidden';
+        document.activeElement.blur();
+        $('#nova-overlay').fadeIn('fast').css('display', 'flex');
+    }
+    function HideProgress() {
+        document.body.style.overflow = 'auto';
+        $('#nova-overlay').fadeOut('slow');
+    }
+</script>
 <style>
     .autocomplete {
         position: relative;
