--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -680,6 +680,7 @@
     }
 
     function YeniKalem() {
+        ShowProgress()
         var SeriNo = $("#SERİ_NO").val();
 
         $("#kalemkaydetbtn").prop("disabled", true);
@@ -694,6 +695,7 @@
                         url: ProcUrl,
                         type: 'GET',
                         success: (data) => {
+                            HideProgress()
                             Swal.fire({
                                 html: `Yeni kalem <br/><b>${data[0].SERI_NO}</b><br/> barkod no'su ile kaydedilecektir, onaylıyor musunuz?`,
                                 icon: 'warning',
