--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -617,20 +617,26 @@
                     string s = Request.Cookies["Id"].Value + ".png?" + DateTime.Now.Ticks.ToString();
                 }
                 <a href="#" class="nav__link nav__logout profil" style="padding-top: 2rem !important; margin-top: 0 !important;">
-                    
+
                     <span class="nav__name ms-1" id="pageName"></span>
                 </a>
                 <a href="/Profil/Index" class="nav__link nav__logout profil" style="margin-top: 50% !important; padding: 0 !important; ">
 
                     <img src="/assets/img/avatars/@s" type="image/png" class="rounded-circle profil" style="width: 35px;">
 
-                    <span class="nav__name ms-1">@Request.Cookies["Name"].Value</span>
+                    <span class="nav__name ms-1"><b>@Request.Cookies["Name"].Value</b></span>
                 </a>
 
                 <a href="#" class="nav__link nav__logout cikis" data-bs-toggle="modal"
                    data-bs-target="#cikis" style="margin-top:5% !important;padding: 0 !important;">
                     <i class='bx bx-lock nav__icon'></i>
                     <span class="nav__name">Çıkış</span>
+                </a>
+                <a href="/Home/Index" class="nav__link" style="margin-top:2rem;padding: 0 !important; ">
+
+                    <img src="/assets/img/icons/brands/Nova.png" height="auto" width="25px" class="mb-1" />
+
+                    <span class="nav__name ms-1">NOVA ©</span>
                 </a>
             </div>
 
