--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -109,13 +109,13 @@
 
                 @RenderBody()
 
-                <div class="foot" style="position:absolute;bottom:0;right:0;left:0;">
+                @*<div class="foot" style="position:absolute;bottom:0;right:0;left:0;">
                     <div class="text-center">
                         ©
                         <script>document.write(2022);</script>, designed by
                         <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
                     </div>
-                </div>
+                </div>*@
 
             </div>
         </div>
