--- a/NOVA/Views/Shared/_Layout_isemri.cshtml
+++ b/NOVA/Views/Shared/_Layout_isemri.cshtml
@@ -127,14 +127,14 @@
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <div class="foot" style="position:absolute;bottom:0;width:80%">
+                @*<div class="foot" style="position:absolute;bottom:0;width:80%">
 
                     <div class="text-center" style="margin-left:7%">
                         ©
                         <script>document.write(2022);</script>, designed by
                         <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
                     </div>
-                </div>
+                </div>*@
                 <!-- / Footer -->
 
 
