--- a/NOVA/Views/Satis/Index.cshtml
+++ b/NOVA/Views/Satis/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml"
 }
 
 
@@ -178,7 +178,7 @@
                                 <th data-formatter="girisFormatter" data-halign="center" data-searchable="false">Son Girişler</th>
                                 <th data-formatter="cikisFormatter" data-halign="center" data-searchable="false">Son Çıkışlar</th>
                                 @{
-                                    if (ViewBag.OzelYetki)
+                                    If (ViewBag.OzelYetki)
                                     {
                                         <th data-formatter="listefiyatiFormatter" data-visible="false" data-halign="center" data-searchable="false">Liste Fiyatı</th>
                                         <th data-formatter="iskontoFormatter" data-halign="center" data-searchable="false">İskonto</th>
