--- a/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
+++ b/NOVA/Views/Shared/_Layout _yonetim_stok.cshtml
@@ -111,7 +111,7 @@
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme mb-0">
+                @*<footer class="content-footer footer bg-footer-theme mb-0">
                     <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
@@ -120,7 +120,7 @@
                             <a href="#" target="_blank" class="footer-link fw-bolder"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="3%" class="mb-1" /> NOVA</a>
                         </div>
                     </div>
-                </footer>
+                </footer>*@
                 <!-- / Footer -->
 
 
