--- a/NOVA/Views/Uretim/IsEmri.cshtml
+++ b/NOVA/Views/Uretim/IsEmri.cshtml
@@ -41,7 +41,7 @@
 
     <div class="container-sm mt-0">
         <div class="row">
-            <footer class="content-footer footer bg-footer-theme">
+            @*<footer class="content-footer footer bg-footer-theme">
                 <div class="container-xxl d-flex  text-nowrap justify-content-between py-2 flex-md-row flex-column">
                     <div style="padding-left:40%">
                         ©
@@ -51,7 +51,7 @@
 
                     </div>
                 </div>
-            </footer>
+            </footer>*@
         </div>
 
 
