--- a/NOVA/Views/Yonetim/Index.cshtml
+++ b/NOVA/Views/Yonetim/Index.cshtml
@@ -322,7 +322,7 @@
                     </div>
                     <!-- / Content -->
                     <!-- Footer -->
-                    <footer class="content-footer footer bg-footer-theme">
+                    <!--<footer class="content-footer footer bg-footer-theme">
                         <div class="container-xxl d-flex  text-nowrap justify-content-between py-2 flex-md-row flex-column">
                             <div style="padding-left:40%">
                                 ©
@@ -332,7 +332,7 @@
 
                             </div>
                         </div>
-                    </footer>
+                    </footer>-->
                     <!-- / Footer -->
 
                     <div class="content-backdrop fade"></div>
