--- a/NOVA/Views/Satis/Test.cshtml
+++ b/NOVA/Views/Satis/Test.cshtml
@@ -144,7 +144,7 @@
                     </div>
                     <!-- / Content -->
                     <!-- Footer -->
-                    <footer class="content-footer footer bg-footer-theme">
+                    @*<footer class="content-footer footer bg-footer-theme">
                         <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
                             <div class="mb-2 mb-md-0">
                                 ©
@@ -167,7 +167,7 @@
                                    class="footer-link me-4">Support</a>
                             </div>
                         </div>
-                    </footer>
+                    </footer>*@
                     <!-- / Footer -->
 
                     <div class="content-backdrop fade"></div>
