--- a/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
+++ b/NOVA/Views/Sevkiyat/SaticiSiparisRaporuPartials/SiparisRaporu_Modal.cshtml
@@ -735,6 +735,7 @@
                 customClass: 'AreYouSureAlert'
             });
         }
+        HideProgress()
     }
 
     function KalemEkle() {
