--- a/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
+++ b/NOVA/Views/Shared/_Layout_detayli_Sip.cshtml
@@ -204,7 +204,7 @@
                 @RenderBody()
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme">
+                @*<footer class="content-footer footer bg-footer-theme">
                     <div class="container-xxl d-flex flex-wrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
@@ -213,7 +213,7 @@
                             <a href="#" target="_blank" class="footer-link fw-bolder"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="3%" class="mb-1" /> NOVA</a>
                         </div>
                     </div>
-                </footer>
+                </footer>*@
                 <!-- / Footer -->
 
                 <div class="content-backdrop fade"></div>
