--- a/NOVA/Views/Shared/_layout_satinalma.cshtml
+++ b/NOVA/Views/Shared/_layout_satinalma.cshtml
@@ -99,7 +99,7 @@
 
                 <!-- / Content -->
                 <!-- Footer -->
-                <footer class="content-footer footer bg-footer-theme mb-0" style="background-color:transparent !important">
+                @*<footer class="content-footer footer bg-footer-theme mb-0" style="background-color:transparent !important">
                     <div class="container-xxl d-flex text-nowrap justify-content-between py-2 flex-md-row flex-column">
                         <div style="padding-left:40%">
                             ©
@@ -108,7 +108,7 @@
                             <a href="#" target="_blank" class="footer-link fw-bolder"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="3%" class="mb-1" /> NOVA</a>
                         </div>
                     </div>
-                </footer>
+                </footer>*@
                 <!-- / Footer -->
 
 
